--- a/rnn/model_identification/model_identification.ipynb
+++ b/rnn/model_identification/model_identification.ipynb
@@ -23,13 +23,10 @@
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "\n",
         "from utils.data_utils import (\n",
         "    Mode,\n",
         "    get_features,\n",
-        "    get_labels,\n",
-        "    get_mixed_trials_data,\n",
-        "    normalize_train_labels,\n",
-        "    normalize_val_labels,\n",
         ")\n",
         "\n",
         "# Setting seed so that it can be deterministic in initialization\n",
@@ -44,14 +41,14 @@
         "id": "PMlEqjUMiTix"
       },
       "source": [
-        "## Read data"
+        "## Constants"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MMZpZBJDZZcc"
+        "id": "PHoQwlkUoxlk"
       },
       "outputs": [],
       "source": [
@@ -59,11 +56,30 @@
         "N_VAL_AGENT = 3000\n",
         "NUM_TRIAL = 500\n",
         "\n",
-        "train_file = \"train_file.csv\"\n",
-        "val_file = \"val_file.csv\"\n",
+        "### Change me\n",
+        "classification_type = \"HRL\"  # @param ['2PRL-t', 'HRL', 'PRL'] {allow-input: true}\n",
+        "###\n",
         "\n",
-        "train_data = pd.read_csv(train_file)\n",
-        "val_data = pd.read_csv(val_file)"
+        "if classification_type == \"HRL\":\n",
+        "    cognitive_model_to_data_file = {\n",
+        "        Mode.HRL2: (\"t\", \"v\", 'test'),\n",
+        "        Mode.HRL2_Bayes: (\"t\", \"v\", 'test'),\n",
+        "        Mode.HRL2_StickyBayes: (\"t\", \"v\", 'test'),\n",
+        "    }\n",
+        "elif classification_type == \"PRL\":\n",
+        "    cognitive_model_to_data_file = {\n",
+        "        Mode.PRL2: (\"t\", \"v\", 'test'),\n",
+        "        Mode.PRL4: (\"t\", \"v\", 'test'),\n",
+        "        Mode.Bayes: (\"t\", \"v\", 'test'),\n",
+        "        Mode.StickyBayes: (\"t\", \"v\", 'test'),\n",
+        "    }\n",
+        "else:\n",
+        "    cognitive_model_to_data_file = {\n",
+        "        Mode.PRL2: (\"t\", \"v\", 'test'),\n",
+        "        Mode.PRL2_intractable: (\"t\", \"v\", 'test'),\n",
+        "    }\n",
+        "\n",
+        "OUPUT_DIM = len(cognitive_model_to_data_file)"
       ]
     },
     {
@@ -71,35 +87,68 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Process data"
+        "## Read data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cognitive_model_to_train_data = {}\n",
+        "cognitive_model_to_val_data = {}\n",
+        "for mode, (train_filepath, val_filepath, _) in cognitive_model_to_data_file.items():\n",
+        "    cognitive_model_to_train_data[mode] = pd.read_csv(train_filepath)\n",
+        "    cognitive_model_to_val_data[mode] = pd.read_csv(val_filepath)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8QHwk0oL7D0r"
+      },
+      "source": [
+        "## Process Data"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fWoTp-kb2L83"
+        "id": "iPblbeQKQTMd"
       },
       "outputs": [],
       "source": [
-        "all_train_features = get_features(train_data, N_TRAIN_AGENT, NUM_TRIAL, mode=mode)\n",
-        "all_val_features = get_features(val_data, N_VAL_AGENT, NUM_TRIAL, mode=mode)\n",
+        "from process_data import process_data\n",
         "\n",
-        "# Padding trials if necessary\n",
         "target_trial = 500\n",
-        "all_trials = [target_trial]\n",
-        "train_features = get_mixed_trials_data(all_train_features, all_trials, mode=mode)\n",
-        "val_features = get_mixed_trials_data(all_val_features, all_trials, mode=mode)\n",
+        "train_features, normalized_train_labels = process_data(\n",
+        "    cognitive_model_to_raw_data, N_TRAIN_AGENT, NUM_TRIAL, target_trial\n",
+        ")\n",
+        "val_features, normalized_val_labels = process_data(\n",
+        "    cognitive_model_to_val_data, N_VAL_AGENT, NUM_TRIAL, target_trial\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "S7X9IRxlmymJ"
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn.utils import shuffle\n",
         "\n",
-        "# Process labels\n",
-        "train_name_to_labels = get_labels(train_data, mode)\n",
-        "normalized_train_labels, name_to_scaler = normalize_train_labels(train_name_to_labels)\n",
-        "\n",
-        "val_name_to_labels = get_labels(val_data, mode)\n",
-        "normalized_val_labels = normalize_val_labels(val_name_to_labels, name_to_scaler)\n",
-        "\n",
-        "print(train_features.shape, len(val_name_to_labels))\n",
-        "output_dim = len(val_name_to_labels)"
+        "train_features, normalized_train_labels = shuffle(\n",
+        "    train_features.numpy(), normalized_train_labels, random_state=0\n",
+        ")\n",
+        "val_features, normalized_val_labels = shuffle(\n",
+        "    val_features.numpy(), normalized_val_labels, random_state=0\n",
+        ")\n",
+        "print(train_features.shape, normalized_train_labels.shape)"
       ]
     },
     {
@@ -115,9 +164,7 @@
     {
       "attachments": {},
       "cell_type": "markdown",
-      "metadata": {
-        "id": "76fOBwWjP1N7"
-      },
+      "metadata": {},
       "source": [
         "### Bayesian Search"
       ]
@@ -126,7 +173,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tzK8lMQCzXeV"
+        "id": "7r6BAyfOaYt-"
       },
       "outputs": [],
       "source": [
@@ -164,7 +211,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Training Model"
+        "### Training model"
       ]
     },
     {
@@ -201,82 +248,73 @@
       ]
     },
     {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Prepare test data"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "y-gsC8AfzFKf"
+        "id": "avxMUn_NchI-"
       },
       "outputs": [],
       "source": [
-        "test_data = pd.read_csv(\"test_file.csv\")\n",
-        "all_trials_features = get_features(test_data, num_agents, NUM_TRIAL, mode=mode)\n",
-        "test_name_to_labels = get_labels(test_data, mode)\n",
-        "normalized_test_labels = normalize_val_labels(test_name_to_labels, name_to_scaler)\n",
-        "\n",
-        "print(all_test_features.shape, normalized_test_labels.shape)"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Predict parameters"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "9Tbyty4JKOLd"
-      },
-      "outputs": [],
-      "source": [
-        "all_prediction = best_model.predict(all_test_features)"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Plot parameter recovery"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iQ0j02-qe7DN"
-      },
-      "outputs": [],
-      "source": [
-        "from utils.data_utils import get_recovered_parameters\n",
-        "from utils.plotting import plot_recovery\n",
-        "\n",
-        "all_test_param = get_recovered_parameters(\n",
-        "    name_to_scaler, test_name_to_labels, prediction\n",
+        "cognitive_model_to_test_data = {}\n",
+        "for mode, (_, _, test_filepath) in cognitive_model_to_data_file.items():\n",
+        "    cognitive_model_to_test_data[mode] = pd.read_csv(test_filepath)\n",
+        "    \n",
+        "all_test_features, all_test_labels = process_data(\n",
+        "    cognitive_model_to_test_data, N_VAL_AGENT, NUM_TRIAL, all_trials\n",
         ")\n",
-        "plot_recovery(all_test_param, \"alpha\")\n",
-        "plot_recovery(all_test_param, \"beta\")"
+        "print(all_test_features.shape, all_test_labels.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "v_wM4ltUTd5T"
+      },
+      "outputs": [],
+      "source": [
+        "accr = best_model.evaluate(all_test_features, all_test_labels)\n",
+        "print(\"Test set\\n  Loss: {:0.3f}\\n  Accuracy: {:0.3f}\".format(accr[0], accr[1]))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tyJv1S0pxEN-"
+      },
+      "source": [
+        "### Classification Report"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "prediction = best_model.predict(all_test_features)\n",
+        "y_true, y_pred = np.argmax(all_test_labels, axis=1), np.argmax(\n",
+        "    prediction, axis=1\n",
+        ")\n",
+        "\n",
+        "classification_report(\n",
+        "    y_true, y_pred, target_names=cognitive_model_to_data_file,keys(), output_dict=True\n",
+        ")"
       ]
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
-      "machine_shape": "hm",
+      "collapsed_sections": [
+        "tyJv1S0pxEN-",
+        "76fOBwWjP1N7"
+      ],
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
